[package]
name = "rust-pulse"
version = "0.1.0"
edition = "2021"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
readme = "README.md"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path  = "src/main.rs"
name = "rust-pulse"

[dependencies]
actix-web = "4.9.0"
config = "0.14.0"
reqwest = "0.12.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
